--- a/common/gtk-3.0/sass/_colors.scss
+++ b/common/gtk-3.0/sass/_colors.scss
@@ -1,13 +1,13 @@
 // When color definition differs for dark and light variant,
 // it gets @if ed depending on $variant
 
-$base_color: if($variant !='dark', #ffffff, #404552);
-$text_color: if($variant !='dark', #5c616c, #D3DAE3);
-$bg_color: if($variant !='dark', #F5F6F7, #383C4A);
-$fg_color: if($variant !='dark', #5c616c, #D3DAE3);
+$base_color: if($variant !='dark', #ffffff, #454545);
+$text_color: if($variant !='dark', #5c616c, #DADADA);
+$bg_color: if($variant !='dark', #F5F6F7, #3C3C3C);
+$fg_color: if($variant !='dark', #5c616c, #DADADA);
 
 $selected_fg_color: #ffffff;
-$selected_bg_color: #5294e2;
+$selected_bg_color: #646464;
 $selected_borders_color: darken($selected_bg_color, 20%);
 $borders_color: if($variant !='dark', darken($bg_color,9%), darken($bg_color,6%));
 
@@ -37,17 +37,17 @@ $insensitive_bg_color: if($variant !='dark', mix($bg_color, $base_color, 40%), l
 $header_bg: red;
 @if $transparency=='true' and ($variant=='light' or $variant=='lighter') { $header_bg: transparentize(#e7e8eb, 0.05); }
 @if $transparency=='false' and ($variant=='light' or $variant=='lighter') { $header_bg: #e7e8eb; }
-@if $transparency=='true' and ($variant=='dark' or $variant=='darker') { $header_bg: transparentize(#2f343f, 0.03); }
-@if $transparency=='false' and ($variant=='dark' or $variant=='darker') { $header_bg: #2f343f; }
+@if $transparency=='true' and ($variant=='dark' or $variant=='darker') { $header_bg: transparentize(#343434, 0.03); }
+@if $transparency=='false' and ($variant=='dark' or $variant=='darker') { $header_bg: #343434; }
 
 $header_bg_backdrop: if($variant == 'dark' or $variant=='darker', lighten($header_bg, 1.5%), lighten($header_bg, 3%));
 
 $header_border: if($variant == 'light' or $variant=='lighter', darken($header_bg, 7%), darken($header_bg, 4%));
 
 $header_fg: if($variant == 'light' or $variant=='lighter', saturate(transparentize($fg_color, 0.2), 10%), saturate(transparentize($fg_color, 0.2), 10%));
-$header_fg: if($variant=='darker', saturate(transparentize(#D3DAE3, 0.2), 10%), $header_fg);
+$header_fg: if($variant=='darker', saturate(transparentize(#DADADA, 0.2), 10%), $header_fg);
 
-$dark_sidebar_bg: if($transparency == 'true', transparentize(#353945, 0.05), #353945);
+$dark_sidebar_bg: if($transparency == 'true', transparentize(#404040, 0.05), #404040);
 $dark_sidebar_fg: #BAC3CF;
 @if $variant == 'lighter' {
   $dark_sidebar_bg: if($transparency == 'true', transparentize($bg_color, 0.05), $bg_color);
@@ -96,15 +96,15 @@ $wm_button_close_bg: if($variant == 'light' or $variant=='lighter', #f46067, #cc
 $wm_button_close_hover_bg: if($variant == 'light' or $variant=='lighter', #f68086, #d7787d);
 $wm_button_close_active_bg: if($variant == 'light' or $variant=='lighter', #f13039, #be3841);
 
-$wm_icon_close_bg: if($variant == 'light' or $variant=='lighter', #F8F8F9 , #2f343f);
+$wm_icon_close_bg: if($variant == 'light' or $variant=='lighter', #F8F8F9 , #404040);
 
 // Minimize, Maximize
-$wm_button_hover_bg: if($variant == 'light' or $variant=='lighter', #fdfdfd, #454C5C);
+$wm_button_hover_bg: if($variant == 'light' or $variant=='lighter', #fdfdfd, #4c4c4c);
 $wm_button_active_bg: $selected_bg_color;
 
-$wm_button_hover_border: if($variant == 'light' or $variant=='lighter', #D1D3DA, #262932);
+$wm_button_hover_border: if($variant == 'light' or $variant=='lighter', #D1D3DA, #292929);
 
-$wm_icon_bg: if($variant == 'light' or $variant=='lighter', #90949E, #90939B);
-$wm_icon_unfocused_bg: if($variant == 'light' or $variant=='lighter', #B6B8C0, #666A74);
-$wm_icon_hover_bg: if($variant == 'light' or $variant=='lighter', #7A7F8B, #C4C7CC);
+$wm_icon_bg: if($variant == 'light' or $variant=='lighter', #90949E, #909090);
+$wm_icon_unfocused_bg: if($variant == 'light' or $variant=='lighter', #B6B8C0, #6A6A6A);
+$wm_icon_hover_bg: if($variant == 'light' or $variant=='lighter', #7A7F8B, #c7c7c7);
 $wm_icon_active_bg: $selected_fg_color;
